--- a/.rvmrc
+++ b/.rvmrc
@@ -1,7 +1,1 @@
-
-if [[ -d "${rvm_path:-$HOME/.rvm}/environments" \
-  && -s "${rvm_path:-$HOME/.rvm}/environments/ruby-1.9.2-p290@rails-3.2" ]] ; then
-  \. "${rvm_path:-$HOME/.rvm}/environments/ruby-1.9.2-p290@rails-3.2"
-else
-  rvm --create  "ruby-1.9.2-p290@rails-3.2"
-fi
+\. "${rvm_path:-$HOME/.rvm}/environments/ruby-1.9.3-p194"
