--- a/test/dummy/config/mongoid.yml
+++ b/test/dummy/config/mongoid.yml
@@ -1,20 +1,18 @@
 development:
-  host: localhost
-  database: dummy_development
-
+  sessions:
+    default:
+      database: trust_dummy_development
+      hosts:
+        - localhost:27017
 test:
-  host: localhost
-  database: dummy_test
-
-# set these environment variables on your prod server
-production:
-  host: <%= ENV['MONGOID_HOST'] %>
-  port: <%= ENV['MONGOID_PORT'] %>
-  username: <%= ENV['MONGOID_USERNAME'] %>
-  password: <%= ENV['MONGOID_PASSWORD'] %>
-  database: <%= ENV['MONGOID_DATABASE'] %>
-  # slaves:
-  #   - host: slave1.local
-  #     port: 27018
-  #   - host: slave2.local
-  #     port: 27019
+  sessions:
+    default:
+      database: trust_dummy_test
+      hosts:
+        - localhost:27017
+      options:
+        read: primary
+        # In the test environment we lower the retries and retry interval to
+        # low amounts for fast failures.
+        max_retries: 1
+        retry_interval: 0
